# scruffy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  cli.py  config.yaml  config_template.yaml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  tests.yml
apis/: overserr.py  plex.py  radarr.py  sonarr.py  tautilli.py
core/: config.py  email.py  janitor.py  settings.py  worker.py
email_template/: delete_notification.mjml
email_templates/: delete_notification.mjml  test.mjml
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: RequestExtensionModal.tsx
frontend/src/hooks/: useAuth.ts  useJobRuns.ts  useMedia.ts  usePageSize.ts  useSchedules.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/routes/: __root.tsx  extend.tsx  index.tsx  login.complete.tsx  login.tsx
schemas/: emails.py
scripts/: check_version.sh  crontab  entrypoint.sh  healthcheck.sh  lint.sh  seed_job_runs.py  send_test_reminder.py
scruffy/: logging.py  settings.py
scruffy/app/: app.py  cli.py
scruffy/domain/: __init__.py
scruffy/domain/entities/: __init__.py  media.py  media_request.py  reminder.py
scruffy/domain/services/: retention_calculator.py
scruffy/domain/value_objects/: __init__.py  media_status.py  media_type.py  request_status.py  retention_policy.py  scruffy_quotes.py
scruffy/frameworks_and_drivers/api/: __init__.py  app.py  auth.py  dependencies.py  scheduler.py
scruffy/frameworks_and_drivers/cli/: cli_controller.py
scruffy/frameworks_and_drivers/config/: settings.py
scruffy/frameworks_and_drivers/database/: database.py  extension_model.py  job_run_model.py  job_run_store.py  reminder_model.py  schedule_model.py  settings_model.py  settings_store.py
scruffy/frameworks_and_drivers/di/: container.py
scruffy/frameworks_and_drivers/email/: email_client.py
scruffy/frameworks_and_drivers/http/: http_client.py
scruffy/frameworks_and_drivers/utils/: logging.py  loki_handler.py  quotes.py
scruffy/infra/: __init__.py  constants.py  data_repository.py  data_transfer_objects.py  logging.py  overseer_repository.py  radarr_repository.py  reminder_repository.py  settings.py  sonarr_repository.py
scruffy/interface_adapters/dtos/: media_check_result_dto.py  media_info_dto.py  request_dto.py
scruffy/interface_adapters/gateways/: extension_gateway.py  media_repository_composite.py  overseer_gateway.py  radarr_gateway.py  reminder_gateway.py  sonarr_gateway.py
scruffy/interface_adapters/interfaces/: __init__.py  http_client_interface.py  settings_provider_interface.py
scruffy/interface_adapters/notifications/: email_notification_service.py
scruffy/interface_adapters/presenters/: cli_presenter.py
scruffy/models/: reminder_model.py
scruffy/services/: email_service.py
scruffy/templates/: auth_close.html  base.html.j2  base.mjml  delete.html.j2  plex_login.html  reminder.html.j2
scruffy/templates/web/: _loading.html  auth_close.html  base.html  login.html  media_list.html  plex_login.html
scruffy/use_cases/: check_media_requests_use_case.py  delete_media_use_case.py  mappers.py  process_media_use_case.py  request_extension_use_case.py  send_reminder_use_case.py
scruffy/use_cases/dtos/: media_check_result_dto.py  media_info_dto.py  request_dto.py
scruffy/use_cases/interfaces/: extension_repository_interface.py  media_repository_interface.py  notification_service_interface.py  reminder_repository_interface.py  request_repository_interface.py
src/scruffy/: settings.py
src/scruffy/app/: app.py
src/scruffy/infra/: __init__.py  data_transfer_objects.py  overseer_repository.py  radarr_repository.py
src/scruffy/services/: email_service.py
src/scruffy/templates/: base.html.j2  base.mjml
tests/: conftest.py  test_logging.py  test_loki_handler.py  test_quotes.py
tests/app/: test_app.py  test_cli.py  test_clip.py
tests/domain/entities/: test_media.py  test_media_request.py  test_reminder.py
tests/domain/services/: test_retention_calculator.py
tests/domain/value_objects/: test_media_status.py  test_media_type.py  test_request_status.py  test_retention_policy.py  test_scruffy_quotes.py
tests/frameworks_and_drivers/: test_cli_controller.py  test_container.py  test_email_client.py  test_http_client.py
tests/frameworks_and_drivers/api/: test_app.py  test_auth.py  test_routes_auth.py  test_routes_jobs.py  test_routes_media.py  test_routes_schedules.py  test_routes_settings.py  test_routes_tasks.py  (+1 more)
tests/infra/: test_data_transfer_objects.py  test_overseer_repository.py  test_radarr_repository.py  test_reminder_repository.py  test_sonarr_repository.py
tests/integration/: test_end_to_end_workflow.py
tests/services/: test_email_service.py
tests/use_cases/: test_check_media_requests_use_case.py  test_delete_media_use_case.py  test_mappers.py  test_process_media_use_case.py  test_request_extension_use_case.py  test_send_reminder_use_case.py
(+67 files in other folders)
