[project]
name = "scruffy"
version = "0.2.1"
description = "An opiniated Media cleaner for Overseerr"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-mail>=1.4.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "respx>=0.22.0",
    "ruff>=0.9.5",
    "mypy>=1.15.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async"
]
