[project]
name = "scruffy"
version = "0.3.0"
description = "An opiniated Media cleaner for Overseerr"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-mail>=1.4.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "respx>=0.22.0",
    "ruff>=0.9.5",
    "mypy>=1.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async"
]


[tool.ruff]
target-version = "py313"

# Same as Black
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
# https://github.com/astral-sh/ruff/issues/6740
keep-runtime-typing = true